Dodanie Comment.CS oraz NotePage.Cs

--- a/Automatyzacja2017/PageObjectTests/PageObjectTests.csproj
+++ b/Automatyzacja2017/PageObjectTests/PageObjectTests.csproj
@@ -63,7 +63,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Browser.cs" />
+    <Compile Include="Comment.cs" />
     <Compile Include="MainPage.cs" />
+    <Compile Include="NotePage.cs" />
     <Compile Include="TestCases.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
