--- a/Automatyzacja2017/PageObjectTests/PageObjectTests.csproj
+++ b/Automatyzacja2017/PageObjectTests/PageObjectTests.csproj
@@ -63,11 +63,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Browser.cs" />
-    <Compile Include="Comment.cs" />
-    <Compile Include="MainPage.cs" />
-    <Compile Include="NotePage.cs" />
+    <Compile Include="Klasy\Comment.cs" />
+    <Compile Include="TestObjects\MainPage.cs" />
+    <Compile Include="TestObjects\NotePage.cs" />
     <Compile Include="TestCases.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestObjects\WordPressForms\Wordpresslogin.cs" />
+    <Compile Include="TestObjects\WordPressForms\WPadmin.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -78,6 +80,7 @@
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
